# ctype

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ctype/: __init__.py  __main__.py  cli.py  config.py  renderer.py  repl.py
tests/: test_cli.py  test_config.py  test_renderer.py
