[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctype"
version = "0.2.0"
description = "Cross-platform 'type'/'cat' replacement with syntax highlighting via rich."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "forensicmike" }]
keywords = ["cat", "type", "syntax-highlighting", "cli", "rich"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Topic :: Software Development",
]
dependencies = [
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/forensicmike/ctype"
Repository = "https://github.com/forensicmike/ctype"
Issues = "https://github.com/forensicmike/ctype/issues"

[project.scripts]
ctype = "ctype.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ctype"]

[tool.hatch.build.targets.sdist]
include = ["src/ctype", "README.md", "AGENTS.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# ---------------------------------------------------------------------------
# Ruff (medium strictness)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "I",    # Import sort
    "E",    # Errors
    "W",    # Warnings
    "F",    # Pyflakes
    "UP",   # Pyupgrade
    "B",    # Bugbear
    "SIM",  # Simplify
    "ARG",  # Unused arguments
    "COM",  # Comma rules
    "Q",    # Quote rules
    "RET",  # Return-style
    "PIE",  # Misc lint
]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "COM812", # missing-trailing-comma (conflicts with formatter)
    "Q000",   # bad-quotes-inline-string
    "SIM108", # ternary suggestion can hurt readability
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",  # Pytest fixtures are passed as args even when only used for side effects
]

[tool.ruff.lint.isort]
known-first-party = ["ctype"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
